--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 	  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>heavybit</title>
+		<link rel="shortcut icon" href="images/favicon.ico" />
 		<link rel="stylesheet" type="text/css" href="app.css">
 	</head>
 	<body>
