2nd try to add favicon

--- a/20130319_speaker_series_rsvp_ivan_kiringin.html
+++ b/20130319_speaker_series_rsvp_ivan_kiringin.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Heavybit Speaker Series RSVP</title>
-		<link rel="shortcut icon" href="images/favicon.ico" />
+		<link rel="shortcut icon" href="/images/favicon.ico" />
 		<style>
 			body {
 				background-color: #58595b;
