--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 	  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>heavybit</title>
+		<title>Heavybit</title>
 		<link rel="stylesheet" type="text/css" href="app.css">
 	</head>
 	<body>
