--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 	  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>Heavybit</title>
 		<link rel="stylesheet" type="text/css" href="app.css">
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+          ga('create', 'UA-40014110-1', 'heavybit.com');
+          ga('send', 'pageview');
+    </script> 
 	</head>
 	<body>
 		<div>
