Add Google Analytics to speaker series pages

--- a/20130312_speaker_series_rsvp_adam_wiggins.html
+++ b/20130312_speaker_series_rsvp_adam_wiggins.html
@@ -82,7 +82,15 @@ div.fsSubmit {
 }
 
 </style>
-</head>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+          ga('create', 'UA-40014110-1', 'heavybit.com');
+          ga('send', 'pageview');
+    </script> 
+	</head>
 <body class="fsBody" id="fsLocal">
 
 <div id="hblogo"><img src="http://gallery.mailchimp.com/bbdf35a062a2cb177b173d3ee/images/image_13588822046051358882204.jpg" /></div>
