--- a/20130205_speaker_series_rsvp_chris_stolt.html
+++ b/20130205_speaker_series_rsvp_chris_stolt.html
@@ -27,7 +27,15 @@
 				margin-left: 3px !important;
 			}
 		</style>
-	</head>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+          ga('create', 'UA-40014110-1', 'heavybit.com');
+          ga('send', 'pageview');
+    </script> 
+		</head>
 	<body>
 		<div id="hblogo"><img src="http://gallery.mailchimp.com/bbdf35a062a2cb177b173d3ee/images/image_13588822046051358882204.jpg" /></div>
 		<script type="text/javascript" src="http://www.formstack.com/forms/js.php?1389257-01tG5P4S92-v3"></script><noscript><a href="http://www.formstack.com/forms/?1389257-01tG5P4S92" title="Heavybit Speaker Series RSVP">Heavybit Speaker Series RSVP Form</a></noscript>
