--- a/20130409_speaker_series_rsvp_adam_gross.html
+++ b/20130409_speaker_series_rsvp_adam_gross.html
@@ -28,6 +28,14 @@
 				margin-left: 3px !important;
 			}
 		</style>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+          ga('create', 'UA-40014110-1', 'heavybit.com');
+          ga('send', 'pageview');
+    </script> 
 	</head>
 	<body>
 		<div id="hblogo"><img src="http://gallery.mailchimp.com/bbdf35a062a2cb177b173d3ee/images/image_13588822046051358882204.jpg" /></div>
